# Flamingo

./: .clang-format  .clang-tidy  .gitignore  Android.mk  CMakeLists.txt  CMakePresets.json  README.md  build-android-test.ps1  build.ps1  build_desktop.ps1  copy.ps1  createqmod.ps1  flamingo.code-workspace  mod.json  mod.template.json  qpm.json  qpm.shared.json  qpm_defines_fixed.cmake  test.sh
.github/workflows/: build-android-test.yml  build-ndk.yml  publish.yml
include/: git_info.h  logger.hpp
shared/: And64InlineHook.hpp  calling-convention.hpp  calling_convention.hpp  capi.h  enum-helpers.hpp  fixups.hpp  hook-data.hpp  hook-installation-result.hpp  hook-installer.hpp  hook-metadata.hpp  hooking.hpp  installer.hpp  more_stuff.hpp  page-allocator.hpp  target-data.hpp  trampoline-allocator.hpp  trampoline.hpp  type-info.hpp  util.hpp
src/: And64InlineHook.cpp  capi.cpp  fixups.cpp  flamingo-stamp.cpp  hook-installer.cpp  hook-target.cpp  installer.cpp  main.cpp  page-allocator.cpp  things.cpp  trampoline-allocator.cpp  trampoline.cpp
src/trampoline/: trampoline-allocator.cpp  trampoline.cpp
test/: api.cpp  main.cpp  sorted-hooks.cpp  test-wrapper.hpp
